grammar.js
    translation_unit: $ => seq(
      repeat($._top_level_item),
      optional($.program),
    ),

    _top_level_item: $ => prec(2, choice(
      seq($.include_statement, $._end_of_statement),
      $.program,
      $.module,
      $.submodule,
      $.interface,
      $.subroutine,
      $.function
    )),

    // Block level structures

    program: $ => seq(
      optional($.program_statement),
      repeat($._specification_part),
      repeat($._statement),
      optional($.internal_procedures),
      $.end_program_statement
    ),

    program_statement: $ => seq(/program/i, $._name),
    end_program_statement: $ => blockStructureEnding($, 'program'),

    _name: $ => alias($.identifier, $.name),

    _specification_part: $ => prec(1, choice(
      prec(1, seq($.include_statement, $._end_of_statement)),
      seq($.use_statement, $._end_of_statement),
      seq($.implicit_statement, $._end_of_statement),
      seq($.save_statement, $._end_of_statement),
      seq($.import_statement, $._end_of_statement),
      seq($.public_statement, $._end_of_statement),
      seq($.private_statement, $._end_of_statement),
      $.enum,
      $.interface,
      $.derived_type_definition,
      seq($.namelist_statement, $._end_of_statement),
      seq($.common_statement, $._end_of_statement),
      seq($.variable_declaration, $._end_of_statement),
      seq($.variable_modification, $._end_of_statement),
      seq($.parameter_statement, $._end_of_statement),
      seq($.equivalence_statement, $._end_of_statement),
      seq($.data_statement, $._end_of_statement),
      prec(1, seq($.statement_label, $.format_statement, $._end_of_statement))
    )),

    implicit_statement: $ => seq(
      /implicit/i,
      choice(
        commaSep1(seq(
          $.intrinsic_type,
          optional($.size),
          '(',
          commaSep1($.implicit_range),
          ')'
        )),
        seq(
          alias(caseInsensitive('none', false), $.none),
          optional(seq(
            '(',
            commaSep1(choice(
              /type/i,
              /external/i
            )),
            ')'
          ))
        )
      )
    ),

    variable_declaration: $ => seq(
      choice($._intrinsic_type, $.derived_type, alias($.procedure_declaration, $.procedure)),
      optional(seq(',', commaSep1($.type_qualifier))),
      optional('::'),
      $._declaration_targets
    ),

    _declaration_targets: $ => commaSep1(choice(
      $.identifier,
      // Only valid for characters
      prec.right(1, seq($.identifier, $.character_length)),
      $.call_expression,
      $.assignment_statement,
      $.pointer_association_statement
    )),

    _intrinsic_type: $ => prec.right(seq(
      $.intrinsic_type,
      optional($.size)
    )),

    intrinsic_type: $ => choice(
      /byte/i,
      /integer/i,
      /real/i,
      /double *precision/i,
      /complex/i,
      /double *complex/i,
      /logical/i,
      /character/i
    ),

    size: $ => choice(
      seq(optional(alias('*', $.assumed_size)), $.argument_list),
      seq('*', choice(/\d+/, $.parenthesized_expression))
    ),

    type_qualifier: $ => choice(
      /abstract/i,
      /allocatable/i,
      /automatic/i,
      prec.right(seq(
        /dimension/i,
        optional($.argument_list)
      )),
      /constant/i,
      /contiguous/i,
      /device/i,
      /external/i,
      seq(
        /intent/i,
        '(',
        choice(
          /in/i,
          /out/i,
          /in ?out/i
        ),
        ')'
      ),
      /intrinsic/i,
      /managed/i,
      /optional/i,
      /parameter/i,
      /pinned/i,
      /pointer/i,
      /private/i,
      /protected/i,
      /public/i,
      /save/i,
      /sequence/i,
      /shared/i,
      /static/i,
      /target/i,
      /texture/i,
      /value/i,
      /volatile/i
    ),

    _statement: $ => seq(
      optional($.statement_label),
      $._statements,
      $._end_of_statement
    ),

    stop_statement: $ => seq(
      optional(/error/i),
      /stop/i,
      optional($._expression),
      optional(seq(
        ',',
        prec(1, seq(/quiet/i, '=', $._expression))
      ))
    ),

    assignment_statement: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left',$._expression),
      '=',
      field('right',$._expression),
    )),

    pointer_association_statement: $ => prec.right(seq(
      $._expression, // this needs to support structs i.e. mytype%attr
      '=>',
      $._expression
    )),

    // `call` should bind more tightly than ordinary expressions
    subroutine_call: $ => prec(1, seq(
      /call/i,
      // Allow expressions to allow calling type-bound procedures
      field('subroutine', $._expression),
      optional($.cuda_kernel_argument_list),
      optional($.argument_list)
    )),

    if_statement: $ => choice(
      $._inline_if_statement,
      $._block_if_statement
    ),

    _inline_if_statement: $ => prec.right(2, seq(
      /if/i,
      $.parenthesized_expression,
      $._statements
    )),

    _block_if_statement: $ => seq(
      optional($.block_label_start_expression),
      /if/i,
      $.parenthesized_expression,
      /then/i,
      optional($._block_label),
      $._end_of_statement,
      repeat($._statement),
      repeat($.elseif_clause),
      optional($.else_clause),
      optional($.statement_label),
      $.end_if_statement
    ),

    end_if_statement: $ => seq(
      /end *if/i,
      optional($._block_label)
    ),

    elseif_clause: $ => seq(
      /else *if/i,
      $.parenthesized_expression,
      /then/i,
      optional($._block_label),
      $._end_of_statement,
      repeat($._statement)
    ),

    _io_arguments: $ => seq(
      '(',
      choice(
        $.unit_identifier,
        seq($.unit_identifier, ',', $.format_identifier),
        seq($.unit_identifier, ',', $.format_identifier, ',', commaSep1($.keyword_argument)),
        seq($.unit_identifier, ',', commaSep1($.keyword_argument)),
        commaSep1($.keyword_argument)
      ),
      ')'
    ),

    print_statement: $ => seq(
      /print/i,
      $.format_identifier,
      optional(seq(',', $.output_item_list))
    ),

    open_statement: $ => seq(
      /open/i,
      $._io_arguments,
      optional($.output_item_list)
    ),

    write_statement: $ => prec(1, seq(
      /write/i,
      $._io_arguments,
      // Trailing comma here is a legacy extension to gfortran
      optional(','),
      optional($.output_item_list)
    )),

    unit_identifier: $ => prec(1, choice(
      $.number_literal,
      $._io_expressions
    )),

    format_identifier: $ => choice(
      $.statement_label_reference,
      $._io_expressions
    ),

    _io_expressions: $ => prec(1, choice(
      '*',
      $.string_literal,
      $.identifier,
      $.derived_type_member_expression,
      $.concatenation_expression,
      $.math_expression,
      $.parenthesized_expression,
      $.call_expression
    )),

    output_item_list: $ => prec.right(commaSep1($._expression)),

    // Expressions

    _expression: $ => choice(
      $.number_literal,
      $.complex_literal,
      $.string_literal,
      $.boolean_literal,
      $.array_literal,
      $.null_literal,
      $.identifier,
      $.derived_type_member_expression,
      $.logical_expression,
      $.relational_expression,
      $.concatenation_expression,
      $.math_expression,
      $.unary_expression,
      $.parenthesized_expression,
      $.call_expression,
      $.implied_do_loop_expression,
    ),

    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      ')'
    ),

    derived_type_member_expression: $ => prec.right(PREC.TYPE_MEMBER, seq(
      $._expression,
      '%',
      alias($.identifier, $.type_member)
    )),

    logical_expression: $ => {
      const table = [
        [/\.or\./i, PREC.LOGICAL_OR],
        [/\.and\./i, PREC.LOGICAL_AND],
        [/\.eqv\./i, PREC.LOGICAL_EQUIV],
        [/\.neqv\./i, PREC.LOGICAL_EQUIV]
      ]

      return choice(...table.map(([operator, precedence]) => {
        return prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      }).concat(
        [prec.left(PREC.LOGICAL_NOT, seq(/\.not\./i, $._expression))])
      )
    },

    relational_expression: $ => {
      const operators = [
        '<',
        /\.lt\./i,
        '>',
        /\.gt\./i,
        '<=',
        /\.le\./i,
        '>=',
        /\.ge\./i,
        '==',
        /\.eq\./i,
        '/=',
        /\.ne\./i
      ]

      return choice(...operators.map((operator) => {
        return prec.left(PREC.RELATIONAL, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      }))
    },

    concatenation_expression: $ => prec.right(PREC.ADDITIVE, seq(
      field('left', $._expression),
      field('operator', '//'),
      field('right', $._expression)
    )),

    math_expression: $ => {
      const table = [
        ['+', PREC.ADDITIVE],
        ['-', PREC.ADDITIVE],
        ['*', PREC.MULTIPLICATIVE],
        ['/', PREC.MULTIPLICATIVE],
        ['**', PREC.EXPONENT],
        [$.user_defined_operator, PREC.DEFINED_OPERATOR]
      ]

      return choice(...table.map(([operator, precedence]) => {
        return prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      }))
    },

    unary_expression: $ => prec.left(PREC.UNARY, seq(
      field('operator', choice('-', '+', $.user_defined_operator)),
      field('argument', $._expression)
    )),

    call_expression: $ => prec(
      PREC.CALL,
      seq($._expression, repeat1($.argument_list))
    ),

    implied_do_loop_expression: $ => seq(
      '(',
      commaSep1($._expression),
      ',',
      $.loop_control_expression,
      ')'
    ),

    argument_list: $ => prec.dynamic(
      1,
      seq(
        '(',
        commaSep(choice(
          $.keyword_argument,
          $.extent_specifier,
          $.assumed_size,
          $.assumed_rank,
          $._expression
        )),
        ')'
      )
    ),

    // precedence is used to prevent conflict with assignment expression
    keyword_argument: $ => prec(1, seq(
      field("name",$.identifier),
      '=',
      field("value",choice($._expression, $.assumed_size, $.assumed_shape))
    )),

    extent_specifier: $ => seq(
      optional($._expression), // start
      ':',
      optional(choice($._expression, $.assumed_size)), // stop
      optional(seq(':', $._expression)) // stride
    ),

    _block_label: $ => alias($.identifier, $.block_label),

    loop_control_expression: $ => seq(
      $.identifier,
      '=',
      $._expression,
      ',',
      $._expression,
      optional(seq(',', $._expression))
    ),

    array_literal: $ => choice(
      $._array_constructor_legacy,
      $._array_constructor_f2003
    ),

    _array_constructor_legacy: $ => seq('(/', $._ac_value_list, '/)'),

    _array_constructor_f2003: $ => seq('[', $._ac_value_list, ']'),

    complex_literal: $ => seq(
      '(',
      choice($.number_literal, $.identifier, $.unary_expression),
      ',',
      choice($.number_literal, $.identifier, $.unary_expression),
      ')'
    ),

    number_literal: $ => choice(
      $._integer_literal,
      $._float_literal,
      $._boz_literal
    ),

    boolean_literal: $ => token(seq(
      choice(
        /\.true\./i,
        /\.false\./i
      ),
      optional(token.immediate(/_\w+/))
    )),

    identifier: $ => choice(
      /[a-zA-Z_]\w*/,
      /block/i,
      /byte/i,
      /cycle/i,
      /data/i,
      /double/i,
      /else/i,
      /elseif/i,
      /end/i,
      /endif/i,
      /error/i,
      /exit/i,
      /format/i,
      /if/i,
      /inquire/i,
      /null/i,
      /read/i,
      /real/i,
      /select/i,
      /stop/i,
      /target/i,
      /value/i,
      /write/i,
    ),

    comment: $ => token(seq('!', /.*/)),
